Latest AnimeSMP baseline (tutorial, PD, shops, profiles)