@@ -2,11 +2,8 @@ package com.animesmp.core.shop;
 
 import com.animesmp.core.AnimeSMPPlugin;
 import com.animesmp.core.ability.Ability;
-import com.animesmp.core.ability.AbilityRegistry;
-import com.animesmp.core.ability.AbilityTier;
-import com.animesmp.core.shop.rotation.PdStockManager;
-import com.animesmp.core.economy.EconomyManager;
-
+import com.animesmp.core.ability.AbilityLoreUtil;
+import com.animesmp.core.player.PlayerProfile;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
@@ -15,110 +12,173 @@ import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.*;
+import java.lang.reflect.Method;
+import java.util.List;
 
 public class PdShopGuiManager {
 
     private final AnimeSMPPlugin plugin;
-    private final AbilityRegistry registry;
-    private final PdStockManager stockManager;
-    private final EconomyManager econ;
 
-    private static final String TITLE = ChatColor.DARK_RED + "Perma-Death Vendor";
-
-    private static final int PRICE = 8; // 8 PD tokens per PD ability
+    private static final String PD_MENU_TITLE = ChatColor.DARK_RED + "Perma-Death Vendor";
 
     public PdShopGuiManager(AnimeSMPPlugin plugin) {
         this.plugin = plugin;
-        this.registry = plugin.getAbilityRegistry();
-        this.stockManager = plugin.getPdStockManager();
-        this.econ = plugin.getEconomyManager();
     }
 
     public void open(Player player) {
-        Inventory inv = Bukkit.createInventory(null, 27, TITLE);
+        try {
+            Inventory inv = Bukkit.createInventory(null, 54, PD_MENU_TITLE);
 
-        // Info item
-        ItemStack info = new ItemStack(Material.BOOK);
-        ItemMeta im = info.getItemMeta();
-        im.setDisplayName(ChatColor.GOLD + "PD Vendor");
-        im.setLore(Arrays.asList(
-                ChatColor.YELLOW + "Purchase Legendary (PD) Abilities.",
-                "",
-                ChatColor.GRAY + "Currency: " + ChatColor.RED + "PD Tokens",
-                ChatColor.GRAY + "Price: " + ChatColor.RED + PRICE + " tokens each",
-                "",
-                ChatColor.GRAY + "Global stock:",
-                ChatColor.GRAY + "3 PER ability per day",
-                ChatColor.GRAY + "Resets at 08:00 EU"
-        ));
-        info.setItemMeta(im);
-        inv.setItem(4, info);
+            List<Ability> stock = plugin.getPdStockManager().getCurrentStock();
+            if (stock == null) stock = java.util.Collections.emptyList();
 
-        // Fetch all PD-tier abilities
-        List<Ability> pdAbilities = new ArrayList<>();
-        for (Ability a : registry.getAllAbilities()) {
-            if (a != null && a.getTier() == AbilityTier.PD) {
-                pdAbilities.add(a);
+            int slot = 10;
+            for (Ability ability : stock) {
+                if (ability == null) continue;
+                if (slot >= inv.getSize()) break;
+
+                int cost = safeCost(ability);
+                int remaining = safeRemaining(ability);
+
+                ItemStack item = plugin.getAbilityManager().createAbilityScroll(ability, 1);
+
+                try {
+                    ItemMeta meta = item.getItemMeta();
+                    if (meta != null) {
+                        meta.setLore(AbilityLoreUtil.pdLore(plugin, ability, cost, remaining));
+                        item.setItemMeta(meta);
+                    }
+                } catch (Throwable t) {
+                    ItemMeta meta = item.getItemMeta();
+                    if (meta != null) {
+                        meta.setLore(List.of(
+                                ChatColor.GRAY + safeAbilitySummary(ability),
+                                "",
+                                ChatColor.GRAY + "Cost: " + ChatColor.RED + cost + ChatColor.GRAY + " PD Tokens",
+                                ChatColor.GRAY + "Stock: " + ChatColor.WHITE + remaining
+                        ));
+                        item.setItemMeta(meta);
+                    }
+                }
+
+                inv.setItem(slot, item);
+
+                slot++;
+                if ((slot + 1) % 9 == 0) slot += 2;
             }
+
+            // Info item (includes next refresh)
+            inv.setItem(49, buildInfoItem(player));
+
+            player.openInventory(inv);
+        } catch (Throwable t) {
+            plugin.getLogger().severe("PdShopGuiManager.open() crashed for " + (player != null ? player.getName() : "null"));
+            t.printStackTrace();
+            if (player != null) player.sendMessage(ChatColor.RED + "PD Vendor is temporarily unavailable (error).");
         }
+    }
 
-        int slot = 10;
-        for (Ability ability : pdAbilities) {
-            int remaining = stockManager.getStock(ability.getId());
+    private ItemStack buildInfoItem(Player player) {
+        ItemStack info = new ItemStack(Material.CLOCK);
+        ItemMeta im = info.getItemMeta();
+        if (im != null) {
+            im.setDisplayName(ChatColor.GOLD + "PD Vendor Info");
 
-            ItemStack item = new ItemStack(Material.ENCHANTED_BOOK);
-            ItemMeta meta = item.getItemMeta();
-            meta.setDisplayName(ChatColor.LIGHT_PURPLE + ability.getDisplayName());
-            meta.setLore(Arrays.asList(
-                    ChatColor.GRAY + "Legendary PD Ability",
-                    ChatColor.GRAY + "Price: " + ChatColor.RED + PRICE + " PD Tokens",
+            PlayerProfile profile = plugin.getProfileManager().getProfile(player);
+            int tokens = profile == null ? 0 : profile.getPdTokens();
+
+            String refresh = plugin.getPdStockManager().getFormattedTimeRemaining();
+
+            im.setLore(List.of(
+                    ChatColor.GRAY + "Epics appear more often and are cheaper.",
+                    ChatColor.GRAY + "Legendaries are rarer and cost more.",
                     "",
-                    ChatColor.YELLOW + "Stock remaining: " + ChatColor.AQUA + remaining,
+                    ChatColor.GRAY + "Next refresh in: " + ChatColor.WHITE + refresh,
                     "",
-                    ChatColor.GREEN + "Click to purchase"
+                    ChatColor.GRAY + "Your PD Tokens: " + ChatColor.WHITE + tokens
             ));
-            item.setItemMeta(meta);
-
-            inv.setItem(slot, item);
-            slot++;
-            if (slot == 17) break; // only show up to 7 PD abilities cleanly
+            info.setItemMeta(im);
         }
-
-        // Close button
-        ItemStack exit = new ItemStack(Material.BARRIER);
-        ItemMeta em = exit.getItemMeta();
-        em.setDisplayName(ChatColor.RED + "Close");
-        exit.setItemMeta(em);
-        inv.setItem(26, exit);
-
-        player.openInventory(inv);
+        return info;
     }
 
     public void handlePurchase(Player player, Ability ability) {
-        if (ability == null) return;
+        try {
+            if (player == null || ability == null) return;
 
-        String id = ability.getId();
-        int stock = stockManager.getStock(id);
+            PlayerProfile profile = plugin.getProfileManager().getProfile(player);
+            if (profile == null) return;
 
-        if (stock <= 0) {
-            player.sendMessage(ChatColor.RED + "That ability is sold out for today!");
-            return;
+            int cost = safeCost(ability);
+
+            if (safeRemaining(ability) <= 0) {
+                player.sendMessage(ChatColor.RED + "This ability is out of stock.");
+                return;
+            }
+
+            if (profile.getPdTokens() < cost) {
+                player.sendMessage(ChatColor.RED + "You need " + cost + " PD Tokens.");
+                return;
+            }
+
+            profile.setPdTokens(profile.getPdTokens() - cost);
+            profile.unlockAbility(ability.getId());
+            safeDecrement(ability);
+
+            player.sendMessage(ChatColor.GREEN + "Purchased " + ChatColor.AQUA + safeAbilityName(ability)
+                    + ChatColor.GREEN + " for " + ChatColor.RED + cost + ChatColor.GREEN + " PD Tokens.");
+
+            try {
+                player.getInventory().addItem(plugin.getAbilityManager().createAbilityScroll(ability, 1));
+            } catch (Throwable ignored) {}
+
+        } catch (Throwable t) {
+            plugin.getLogger().severe("PdShopGuiManager.handlePurchase() crashed for " + (player != null ? player.getName() : "null"));
+            t.printStackTrace();
+            if (player != null) player.sendMessage(ChatColor.RED + "Purchase failed due to an internal error. Check console.");
         }
+    }
 
-        if (!econ.trySpendPdTokens(player, PRICE)) {
-            player.sendMessage(ChatColor.RED + "You do not have enough PD Tokens.");
-            return;
+    private int safeCost(Ability a) {
+        try { return plugin.getPdStockManager().getCostFor(a); }
+        catch (Throwable t) { return 10; }
+    }
+
+    private int safeRemaining(Ability a) {
+        try { return plugin.getPdStockManager().getRemaining(a); }
+        catch (Throwable t) { return 0; }
+    }
+
+    private void safeDecrement(Ability a) {
+        try { plugin.getPdStockManager().decrementStock(a); }
+        catch (Throwable ignored) {}
+    }
+
+    private String safeAbilityName(Ability a) {
+        try {
+            Method m = a.getClass().getMethod("getDisplayName");
+            Object r = m.invoke(a);
+            if (r != null) return r.toString();
+        } catch (Throwable ignored) {}
+        try {
+            Method m = a.getClass().getMethod("getId");
+            Object r = m.invoke(a);
+            if (r != null) return r.toString();
+        } catch (Throwable ignored) {}
+        return "Ability";
+    }
+
+    private String safeAbilitySummary(Ability a) {
+        for (String method : new String[]{"getShortDescription", "getDesc"}) {
+            try {
+                Method m = a.getClass().getMethod(method);
+                Object r = m.invoke(a);
+                if (r != null) {
+                    String s = r.toString().trim();
+                    if (!s.isEmpty()) return s;
+                }
+            } catch (Throwable ignored) {}
         }
-
-        // Grant scroll
-        ItemStack scroll = plugin.getAbilityManager().createAbilityScroll(ability, 1);
-        player.getInventory().addItem(scroll);
-
-        // Reduce stock
-        stockManager.decreaseStock(id);
-
-        player.sendMessage(ChatColor.GREEN + "Purchased " + ChatColor.LIGHT_PURPLE + ability.getDisplayName()
-                + ChatColor.GREEN + " for " + ChatColor.RED + PRICE + " PD Tokens.");
+        return safeAbilityName(a);
     }
 }
